style(lint): Use proper JSON formatting

--- a/extensions/roc-package-web-app-react-dev/.eslintrc
+++ b/extensions/roc-package-web-app-react-dev/.eslintrc
@@ -3,7 +3,7 @@
 
     "parser": "babel-eslint",
 
-    plugins: ["eslint-plugin-babel"],
+    "plugins": ["eslint-plugin-babel"],
 
     "rules": {
         "indent": [2, 4, { "SwitchCase": 1 }],
@@ -11,7 +11,7 @@
         "no-warning-comments": 1,
 
         "generator-star-spacing": 0,
-        "babel/generator-star-spacing": [2, { before: false, after: true }],
+        "babel/generator-star-spacing": [2, { "before": false, "after": true }],
 
         "import/order": [2, { "groups": ["builtin", "external", "internal", "parent", "sibling", "index"], "newlines-between": "always"}],
         "import/newline-after-import": [2],
