--- a/extensions/roc-package-web-app-react/.eslintrc
+++ b/extensions/roc-package-web-app-react/.eslintrc
@@ -3,7 +3,7 @@
 
     "parser": "babel-eslint",
 
-    plugins: ["eslint-plugin-babel"],
+    "plugins": ["eslint-plugin-babel"],
 
     "rules": {
         "indent": [2, 4, { "SwitchCase": 1 }],
@@ -13,7 +13,7 @@
         "arrow-parens": ["off", "as-needed"],
 
         "generator-star-spacing": 0,
-        "babel/generator-star-spacing": [2, { before: false, after: true }],
+        "babel/generator-star-spacing": [2, { "before": false, "after": true }],
 
         "import/order": [2, { "groups": ["builtin", "external", "internal", "parent", "sibling", "index"], "newlines-between": "always"}],
         "import/newline-after-import": [2],
